# mcp_connectors

./: .env.example  .gitignore  README.md  mcp-server-example.ipynb  mcp_config.example.json  pyproject.toml
servers/marketplace_api/: server.py
servers/marketplace_api/fixtures/amazon/: auth.json  endpoints.json  error_codes.json  rate_limits.json
servers/marketplace_api/fixtures/ebay/: auth.json  endpoints.json  error_codes.json  rate_limits.json
servers/marketplace_api/fixtures/rakuten/: auth.json  endpoints.json  error_codes.json  rate_limits.json
servers/marketplace_api/specs/: amazon.json  ebay.json  rakuten.json
servers/schema_mapping/: server.py
servers/schema_mapping/internal_models/: inventory.json  order.json  product.json
servers/schema_mapping/marketplace_schemas/amazon/: inventory.json  order.json  product.json
servers/schema_mapping/marketplace_schemas/ebay/: inventory.json  order.json  product.json
servers/schema_mapping/marketplace_schemas/rakuten/: inventory.json  order.json  product.json
servers/schema_mapping/saved_mappings/amazon/: inventory.json  order.json  product.json
servers/schema_mapping/saved_mappings/ebay/: inventory.json  order.json  product.json
servers/schema_mapping/saved_mappings/rakuten/: inventory.json  order.json  product.json
