[project]
name = "marketplace-connectors-mcp"
version = "0.1.0"
description = "MCP servers for ecommerce marketplace connector development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
marketplace-api-server = "servers.marketplace_api.server:main"
